<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/search_bar"
            android:hint="@string/searchbar_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/center_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/my_location" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/purple_pink_gradient_animation"
            android:text="@string/sign_out"
            android:textColor="#fff" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="55dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="120dp"
            android:src="@drawable/bottom_sheet_drag_line"

            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            android:id="@+id/number_spots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/no_photospots_near_you"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <include
                layout="@layout/layout_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>